Fixed button style on firefox

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -2,6 +2,7 @@
 button {
   text-align: left;
   outline: 0;
+  font-weight: normal;
 
   &:focus {
     outline: 0;
